syntax = "proto3";
package notionallabs.anone.launchpad;

import "cosmos/base/v1beta1/coin.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/notional-labs/anone/x/launchpad/types";

message Project {

    // Project owner
    string project_owner = 1 [
        (gogoproto.moretags) = "yaml:\"project_owner\""
    ];

    // Project title
    string project_title = 2 [
        (gogoproto.moretags) = "yaml:\"project_title\""
    ];

    // Project unique id of each project (incremental from 1)
    uint64 project_id = 3 [
        (gogoproto.moretags) = "yaml:\"project_id\""
    ];

    // Project address to store assets
    string project_address = 4 [
        (gogoproto.moretags) = "yaml:\"project_address\""
    ];

    // Whether project is already active
    bool project_active = 5 [
        (gogoproto.moretags) = "yaml:\"project_active\""
    ];

    // Project information
    string project_information = 6 [
        (gogoproto.moretags) = "yaml:\"project_information\""
    ];

    // Begin time for a project
    google.protobuf.Timestamp start_time = 7 [
        (gogoproto.stdtime) = true,
        (gogoproto.nullable) = false,
        (gogoproto.moretags) = "yaml:\"start_time\""
    ];

    // Release mechanism
    /*
    google.protobuf.Any release_mechanism = 7 [
        (cosmos_proto.accepts_interface) = "ReleaseMechanismI",
        (gogoproto.moretags) = "yaml:\"release_mechanism\""
    ];
    */

}